fix size of cover
Former-commit-id: ca4f757b3643f128a80ffc816392c64d9867eda3 [formerly f01f037446a9ecce96bf91c11c1810bd02646dfd]
Former-commit-id: 870e899c88d977d2a7d9d9d5ed247bd3c9c87547

--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -44,10 +44,10 @@
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Border Background="{ThemeResource SystemControlBackgroundBaseMediumBrush}"
+                x:Name="CoverBorder"
                 CacheMode="BitmapCache"
                 HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch"
-                MaxHeight="240">
+                VerticalAlignment="Stretch">
             <Image x:Name="CoverImage"
                    Source="{x:Bind Gallery.Thumb, Mode=OneWay, Converter={StaticResource SoftwareBitmapToImageSourceConverter}}"
                    Stretch="Uniform" />
