--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -10,68 +10,62 @@
              IsTabStop="False"
              UseSystemFocusVisuals="False"
              AutomationProperties.LabeledBy="{x:Bind TitleTextBlock}">
-    <UserControl.Resources>
-        <Style x:Key="DetailTextBlockStyle"
-               TargetType="TextBlock">
-            <Setter Property="Height"
-                    Value="20" />
-            <Setter Property="Foreground"
-                    Value="{ThemeResource ApplicationForegroundThemeBrush}" />
-            <Setter Property="MaxLines"
-                    Value="1" />
-            <Setter Property="TextTrimming"
-                    Value="CharacterEllipsis" />
-        </Style>
-        <Style x:Key="DetailRightTextBlockStyle"
-               BasedOn="{StaticResource DetailTextBlockStyle}"
-               TargetType="TextBlock">
-            <Setter Property="Margin"
-                    Value="8,0,0,0" />
-            <Setter Property="HorizontalAlignment"
-                    Value="Right" />
-            <Setter Property="RelativePanel.AlignRightWithPanel"
-                    Value="True" />
-        </Style>
-    </UserControl.Resources>
-    <Grid Background="{x:Bind Background, Mode=OneWay}"
-          BorderBrush="{x:Bind BorderBrush, Mode=OneWay}"
-          BorderThickness="{x:Bind BorderThickness, Mode=OneWay}"
-          Margin="8,4"
-          x:Name="gd_Root">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition MaxWidth="150"
-                              MinWidth="100" />
-            <ColumnDefinition Width="2*" />
-        </Grid.ColumnDefinitions>
-        <Border Background="{ThemeResource SystemControlBackgroundBaseMediumBrush}"
-                x:Name="CoverBorder"
-                CacheMode="BitmapCache"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch">
-            <Image x:Name="CoverImage"
-                   Source="{x:Bind Gallery.Thumb, Mode=OneWay, Converter={StaticResource SoftwareBitmapToImageSourceConverter}}"
-                   Stretch="Uniform" />
-        </Border>
-        <local:FavoriteCategoryPresenter x:Name="fcpFavorite"
-                                         Margin="-2"
-                                         HorizontalAlignment="Right"
-                                         VerticalAlignment="Top"
-                                         Style="{StaticResource PictureFrameFavoriteCategoryPresenterStyle}"
-                                         Category="{x:Bind Gallery.FavoriteCategory, Mode=OneWay}" />
-        <RelativePanel Grid.Column="1"
-                       Margin="8,4,0,4">
-            <TextBlock x:Name="TitleTextBlock"
-                       VerticalAlignment="Top"
-                       RelativePanel.AlignLeftWithPanel="True"
-                       RelativePanel.AlignRightWithPanel="True"
-                       RelativePanel.AlignTopWithPanel="True"
-                       RelativePanel.Above="CategoryTag"
-                       Text="{x:Bind Gallery, Converter={StaticResource GalleryToTitleStringConverter}, Mode=OneWay}"
-                       Style="{StaticResource SubtitleTextBlockStyle}"
-                       TextWrapping="WrapWholeWords"
-                       MaxLines="3"
-                       TextTrimming="CharacterEllipsis"
-                       Margin="0,0,0,8">
+  <UserControl.Resources>
+    <Style x:Key="DetailTextBlockStyle"
+           TargetType="TextBlock">
+      <Setter Property="Height"
+              Value="20" />
+      <Setter Property="Foreground"
+              Value="{ThemeResource ApplicationForegroundThemeBrush}" />
+      <Setter Property="MaxLines"
+              Value="1" />
+      <Setter Property="TextTrimming"
+              Value="CharacterEllipsis" />
+    </Style>
+    <Style x:Key="DetailRightTextBlockStyle"
+           BasedOn="{StaticResource DetailTextBlockStyle}"
+           TargetType="TextBlock">
+      <Setter Property="Margin"
+              Value="8,0,0,0" />
+      <Setter Property="HorizontalAlignment"
+              Value="Right" />
+      <Setter Property="RelativePanel.AlignRightWithPanel"
+              Value="True" />
+    </Style>
+  </UserControl.Resources>
+  <Grid Background="{x:Bind Background, Mode=OneWay}"
+        BorderBrush="{x:Bind BorderBrush, Mode=OneWay}"
+        BorderThickness="{x:Bind BorderThickness, Mode=OneWay}"
+        Margin="8,4"
+        x:Name="gd_Root">
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition MaxWidth="150"
+                        MinWidth="100" />
+      <ColumnDefinition Width="2*" />
+    </Grid.ColumnDefinitions>
+    <local:CoverPresenter x:Name="Cover"
+                          Source="{x:Bind Gallery.Thumb, Mode=OneWay, Converter={StaticResource SoftwareBitmapToImageSourceConverter}}"
+                          Background="{ThemeResource SystemControlBackgroundBaseMediumBrush}" />
+    <local:FavoriteCategoryPresenter x:Name="fcpFavorite"
+                                     Margin="-2"
+                                     HorizontalAlignment="Right"
+                                     VerticalAlignment="Top"
+                                     Style="{StaticResource PictureFrameFavoriteCategoryPresenterStyle}"
+                                     Category="{x:Bind Gallery.FavoriteCategory, Mode=OneWay}" />
+    <RelativePanel Grid.Column="1"
+                   Margin="8,4,0,4">
+      <TextBlock x:Name="TitleTextBlock"
+                 VerticalAlignment="Top"
+                 RelativePanel.AlignLeftWithPanel="True"
+                 RelativePanel.AlignRightWithPanel="True"
+                 RelativePanel.AlignTopWithPanel="True"
+                 RelativePanel.Above="CategoryTag"
+                 Text="{x:Bind Gallery, Converter={StaticResource GalleryToTitleStringConverter}, Mode=OneWay}"
+                 Style="{StaticResource SubtitleTextBlockStyle}"
+                 TextWrapping="WrapWholeWords"
+                 MaxLines="3"
+                 TextTrimming="CharacterEllipsis"
+                 Margin="0,0,0,8">
                 <ToolTipService.ToolTip>
                     <ToolTip x:Name="TitleToolTop">
                         <TextBlock Text="{x:Bind Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
@@ -79,35 +73,35 @@
                     </ToolTip>
                 </ToolTipService.ToolTip>
             </TextBlock>
-            <local:CategoryTag x:Name="CategoryTag"
-                               RelativePanel.Above="LanguageTextBlock"
-                               Category="{x:Bind Gallery.Category, Mode=OneWay}" />
-            <TextBlock x:Name="LanguageTextBlock"
-                       RelativePanel.Above="Rating"
-                       Text="{x:Bind Gallery.Language, Mode=OneWay, Converter={StaticResource StringConverter}}"
-                       Style="{StaticResource DetailTextBlockStyle}" />
-            <TextBlock x:Name="Rating"
-                       Padding="0,2.5"
-                       RelativePanel.AlignBottomWithPanel="True"
-                       Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
-                       Style="{StaticResource DetailTextBlockStyle}"
-                       TextTrimming="None"
-                       FontFamily="Segoe MDL2 Assets" />
-            <TextBlock x:Name="tbCount"
-                       RelativePanel.AlignVerticalCenterWith="CategoryTag"
-                       RelativePanel.RightOf="CategoryTag"
-                       Text="{x:Bind Gallery.RecordCount, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='Controls/GalleryViewer/RecordCountFormatString'}"
-                       Style="{StaticResource DetailRightTextBlockStyle}" />
-            <TextBlock x:Name="tbPosted"
-                       RelativePanel.AlignVerticalCenterWith="LanguageTextBlock"
-                       RelativePanel.RightOf="LanguageTextBlock"
-                       Text="{x:Bind Gallery.Posted, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}}"
-                       Style="{StaticResource DetailRightTextBlockStyle}" />
-            <TextBlock x:Name="tbUploader"
-                       RelativePanel.AlignVerticalCenterWith="Rating"
-                       RelativePanel.RightOf="Rating"
-                       Text="{x:Bind Gallery.Uploader, Mode=OneWay}"
-                       Style="{StaticResource DetailRightTextBlockStyle}" />
-        </RelativePanel>
-    </Grid>
+      <local:CategoryTag x:Name="CategoryTag"
+                         RelativePanel.Above="LanguageTextBlock"
+                         Category="{x:Bind Gallery.Category, Mode=OneWay}" />
+      <TextBlock x:Name="LanguageTextBlock"
+                 RelativePanel.Above="Rating"
+                 Text="{x:Bind Gallery.Language, Mode=OneWay, Converter={StaticResource StringConverter}}"
+                 Style="{StaticResource DetailTextBlockStyle}" />
+      <TextBlock x:Name="Rating"
+                 Padding="0,2.5"
+                 RelativePanel.AlignBottomWithPanel="True"
+                 Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
+                 Style="{StaticResource DetailTextBlockStyle}"
+                 TextTrimming="None"
+                 FontFamily="Segoe MDL2 Assets" />
+      <TextBlock x:Name="tbCount"
+                 RelativePanel.AlignVerticalCenterWith="CategoryTag"
+                 RelativePanel.RightOf="CategoryTag"
+                 Text="{x:Bind Gallery.RecordCount, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='Controls/GalleryViewer/RecordCountFormatString'}"
+                 Style="{StaticResource DetailRightTextBlockStyle}" />
+      <TextBlock x:Name="tbPosted"
+                 RelativePanel.AlignVerticalCenterWith="LanguageTextBlock"
+                 RelativePanel.RightOf="LanguageTextBlock"
+                 Text="{x:Bind Gallery.Posted, Mode=OneWay, Converter={StaticResource DateTimeOffsetToStringConverter}}"
+                 Style="{StaticResource DetailRightTextBlockStyle}" />
+      <TextBlock x:Name="tbUploader"
+                 RelativePanel.AlignVerticalCenterWith="Rating"
+                 RelativePanel.RightOf="Rating"
+                 Text="{x:Bind Gallery.Uploader, Mode=OneWay}"
+                 Style="{StaticResource DetailRightTextBlockStyle}" />
+    </RelativePanel>
+  </Grid>
 </UserControl>
