lazy for cover blur
Former-commit-id: 1d4b3f3deab06d01f97f7169bacf16d13d568dfc [formerly fb167f1793150a8ed0a8b3b4454cab6c883086b4]
Former-commit-id: 15d6cac16e03276262a8adacf5028bbf5afb5045

--- a/ExViewer/Controls/CoverPresenter.xaml
+++ b/ExViewer/Controls/CoverPresenter.xaml
@@ -13,6 +13,7 @@
              d:DesignWidth="400">
   <Grid Background="{x:Bind Background, Mode=OneWay}">
     <Image x:Name="BackgroundImage"
+           x:DeferLoadStrategy="Lazy"
            Source="{x:Bind Source, Mode=OneWay}"
            Stretch="UniformToFill">
       <interactivity:Interaction.Behaviors>
@@ -23,6 +24,6 @@
       </interactivity:Interaction.Behaviors>
     </Image>
     <Image x:Name="ForegroundImage"
-           Source="{x:Bind Source, Mode=OneWay}"/>
+           Source="{x:Bind Source, Mode=OneWay}" />
   </Grid>
 </UserControl>
