fix input scope
Former-commit-id: cd64f0814c7840253712a38ae0b41bc7caff8086 [formerly cc30ae50dbdc26d998556514cdd66f42809e96a8]
Former-commit-id: 1946ccb9f17beac4107a933848656d06df116101

--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -56,7 +56,7 @@
       <TextBlock Style="{StaticResource TagTextBlockStyle}"
                  DataContextChanged="tbContent_DataContextChanged"
                  FontWeight="{x:Bind State, Mode=OneWay, Converter={StaticResource TagStateToFontWeightConverter}}"
-                 Foreground="{x:Bind State, Mode=OneWay, Converter={StaticResource TagStateToBrushConverter}}"/>
+                 Foreground="{x:Bind State, Mode=OneWay, Converter={StaticResource TagStateToBrushConverter}}" />
     </DataTemplate>
     <DataTemplate x:Key="TagGroupTemplate"
                   x:DataType="tagging:NamespaceTagCollection">
@@ -132,9 +132,9 @@
                     QueryIcon="Tag"
                     PlaceholderText="Enter new tags, separated with comma"
                     Loaded="asbNewTags_Loaded"
-                    TextBoxStyle="{StaticResource AutoSuggestBoxTextBoxStyle}"
                     Style="{StaticResource SearchAutoSuggestBoxStyle}"
                     LostFocus="asbNewTags_LostFocus"
+                    local:TagSuggestionService.InputScope="AlphanumericHalfWidth"
                     local:TagSuggestionService.IsEnabled="True"
                     local:TagSuggestionService.Separator=","
                     local:TagSuggestionService.UseHistory="False"
